--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest --watchAll ",
+    "dev": "nodemon src/app.ts"
+  },
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "axios": "^1.5.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jest": "^29.6.4",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.0",
     "pg-promise": "^11.5.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
