--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest --watchAll ",
-    "dev": "nodemon src/app.ts"
+    "test": "jest --watchAll",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --inspect --transpile-only --watch src src/api.ts",
+    "start": "node ./dist/main.js",
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
@@ -14,10 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jest": "^29.6.4",
-    "nodemon": "^3.1.0",
     "pg-promise": "^11.5.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
 }
